Tue Nov 14 23:44:14 2000  Adam Fedor  <fedor@yogi.doc.com>

	* Source/GSString.m: Add limits.h (for Solaris)

2000-11-14  Adam Fedor  <fedor@gnu.org>

	* Source/GSLocale.m: Put LANGINFO_H ifdefs around include of
	langinfo.h.

2000-11-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: ([GSTcpHandle -receivedEvent:type:extra:forMode:])
	added locks around write operations for multi-threaded operation.
	newDataWithEncodedPort() modified to encode local host as an empty
	string, and other hosts by name rather than address.
	decodePort() added new parameter so that an empty string can be
	decoded as the host to which the GSTcpHandle is talking.
	Modified in various places to keep a record of the IP address of the
	remote end of the connection, so we can pass this to decodePort()
	([-getFds:count:]) fixed error in determining set of file descriptors
	to listen to - resulted in two threads listening to the same descriptor
	at the same time!

2000-11-13  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSGAttributedString.m: partial rewrite to cache/unique
	dictionaries and to coalesce adjacent regions of string with the
	same attributes when setting attributes.

2000-11-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSArray.m: Corrected [NSMutableArray arrayWithObject:] to
	return obj instead of self.
	
Fri Nov 10 12:30:27 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	Added some GNUstep extensions to NSThread to allow JIGS to
	transparently map java threads to gnustep threads (and vice
	versa):
	* Headers/gnustep/base/NSThread.h, Source/externs.m:
	(NSThreadDidStartNotification): New notification.
	* Source/NSThread.m ([NSThread -_sendThreadMethod]): Post 
	the NSThreadDidStartNotification.	
	* Source/NSThread.m, Headers/gnustep/base/NSThread.h
	([+registerCurrentThread]), ([+unregisterCurrentThread]): New
	methods.

2000-11-10  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSBundle.m ([NSBundle +_addFrameworkFromClass:]): avoid crash