@@ -1,3 +1,8 @@
+2000-11-15  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSBundle.m: Minor tidying to avoid compiler warnings.
+	* Source/NSFileManager.m: ditto
+
 Tue Nov 14 23:44:14 2000  Adam Fedor  <fedor@yogi.doc.com>
 
 	* Source/GSString.m: Add limits.h (for Solaris)
